# MAEG5755-2021-Team-PARK

./: .gitmodules  README.md
dependencies/: install_dependencies.sh  install_dexnet_py36.sh  ros-noetic-packages-name-only.txt  ros-noetic-packages.txt  shortcuts_alias.txt
park_demo/park_demo/: CMakeLists.txt  package.xml  park.rviz
park_demo/park_demo/scripts/: gui.py  (+8 more)
park_dexnet/config/: camera_d435_gazebo.intr  camera_d435_reality_on_table.intr  dex-net_4.0_pj.yaml
park_dexnet/deep_grasp_demo/: .rosinstall
park_simulation/park_gazebo/: CMakeLists.txt  add_bowl.launch  add_coke.launch  add_drill.launch  add_stuff.launch  add_table.launch  add_toy_blocks.launch  add_wood_blocks.launch  baxter_on_pedestal_realsense.xacro  baxter_on_pedestal_w_realsense.launch  package.xml  park.rviz
park_simulation/park_gazebo/models/biscuits/: model.sdf
park_simulation/park_gazebo/models/book/: model.sdf
park_simulation/park_gazebo/models/cafe_table/: model-1_4.sdf
park_simulation/park_gazebo/models/glue/: model.sdf
park_simulation/park_gazebo/models/snacks/: model.sdf
park_simulation/park_gazebo/models/soap/: model.sdf
park_simulation/park_gazebo/models/soap2/: model.sdf
park_simulation/park_gazebo/models/wood_block_4cm/: model.config  model.sdf
park_simulation/park_gazebo/models/wood_cube_10cm/: model.sdf
park_simulation/park_gazebo/scripts/: add_coke.py  add_drill.py  add_stuff.py  add_table.py  add_toy_blocks.py  add_wood_blocks.py  delete_coke.py  delete_stuff.py  delete_table.py  delete_toy_blocks.py  delete_wood_blocks.py  init_state.py  reset_state.py
(+42 files in other folders)
