<?xml version="1.0"?>
<package>
  <name>park_gazebo</name>
  <version>0.0.0</version>
  <description>park_gazebo package</description>
  <maintainer email="mfkenson@gmail.com">Kenson</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>
  
  
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
    
